bonus/confs/03_gitlab.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gitlab
  namespace: gitlab

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ee:19.2.0-ee.0
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 22
        volumeMounts:
        - name: gitlab-data
          mountPath: /var/opt/gitlab
        - name: gitlab-logs
          mountPath: /var/log/gitlab
        - name: gitlab-config
          mountPath: /etc/gitlab
      volumes:
      - name: gitlab-data
        emptyDir: {}
      - name: gitlab-logs
        emptyDir: {}
      - name: gitlab-config
        emptyDir: {}

---

apiVersion: v1
kind: Service

metadata:
  name: gitlab
  namespace: gitlab

spec:
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: ssh
    port: 22
    targetPort: 22
