bonus/confs/03_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wil-playground
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: wil.akurochk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil-playground
                port:
                  number: 8888

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: argocd.akurochk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gitlab-webservice
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: gitlab.akurochk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
